# deskKit

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: release-body.md
.github/workflows/: build.yml  pages.yml
docs/: PAGES-启用说明.md  index.html  使用与打包教程.md
scripts/: build-mac.sh  bump-version.mjs  release.sh
src/: App.vue  api.ts  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: compare_sync.rs  confluence.rs  duplicates.rs  find_files.rs  fs_util.rs  lib.rs  main.rs  md5_tool.rs  models.rs  rename_ops.rs  yuque.rs
src/components/: ClearCacheButton.vue  FavoritePathInput.vue  FavoriteUrlInput.vue  SyncPreviewDialog.vue  YuqueExportSelectTree.vue  YuqueExportTree.vue
src/composables/: useConfig.ts  useFavorites.ts  useModuleClear.ts  usePathUrlFavorites.ts  useServerHealth.ts
src/constants/: yuque-disclaimer.ts
src/layout/: AppLayout.vue
src/router/: index.ts
src/stores/: app.ts
src/styles/: global.scss
src/utils/: appStorage.ts  yuque-doc-tree.ts  yuque-snapshot.ts
src/views/: CompareView.vue  ConfluenceView.vue  DuplicatesView.vue  FavoritesView.vue  FindFilesView.vue  Md5View.vue  RenameView.vue  SettingsView.vue  YuqueView.vue
